--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "outDir": "dist/js",
         "target": "ES6",
         "noEmitOnError": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "removeComments": true
     },
     "include": ["app/**/*"]
 }
