--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true,
-        "removeComments": true
+        "removeComments": true,
+        "strictNullChecks": true
     },
     "include": ["app/**/*"]
 }
